Added es6 support, updated the flow for logging in and the api schema

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,1 @@
-GithubClientID = #ADD_CLIENT_ID
-GithubclientSecret = #ADD_CLIENT_SECRET
-GithubcallbackURL = #ADD_CALLBACK_URL
+APP_SECRET="Keyboard cat"
