--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Authentication Example with Next.js and Apollo GraphQL",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon --watch data --watch server server",
+		"dev": "nodemon --watch data --watch server server --exec babel-node",
 		"build": "next build",
 		"start": "NODE_ENV=production node server"
 	},
@@ -14,6 +14,9 @@
 		"apollo-client-preset": "^1.0.5",
 		"apollo-link-context": "^1.0.7",
 		"apollo-server-express": "^1.2.0",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.3",
+		"babel-runtime": "^6.26.0",
 		"body-parser": "^1.18.2",
 		"connect-mongo": "^2.0.0",
 		"cookie-parser": "^1.4.3",
@@ -21,7 +24,7 @@
 		"express": "^4.16.2",
 		"express-session": "^1.15.6",
 		"express-validator": "^5.0.0",
-		"graphql": "^0.11.7",
+		"graphql": "^0.13.2",
 		"graphql-tag": "^2.6.0",
 		"graphql-tools": "^2.12.0",
 		"isomorphic-fetch": "^2.2.1",
@@ -30,13 +33,16 @@
 		"mongoose-mongodb-errors": "0.0.2",
 		"next": "^5.0.0",
 		"passport": "^0.4.0",
-		"passport-github": "^1.1.0",
 		"passport-local-mongoose": "^4.4.0",
 		"react": "^16.2.0",
 		"react-apollo": "^2.0.4",
 		"react-dom": "^16.2.0"
 	},
 	"devDependencies": {
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react": "^6.24.1",
 		"nodemon": "^1.12.5"
 	}
 }
