--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,13 @@
 	"plugins": [
 		"transform-class-properties",
 		"transform-object-rest-spread",
-		"transform-runtime"
+		"babel-plugin-styled-components",
+		"transform-runtime",
+		[
+			"styled-components",
+			{
+				"ssr": true
+			}
+		]
 	]
 }
