--- a/package.json
+++ b/package.json
@@ -31,15 +31,20 @@
 		"isomorphic-unfetch": "^2.0.0",
 		"mongoose": "^5.0.7",
 		"mongoose-mongodb-errors": "0.0.2",
-		"next": "^5.0.0",
+		"next": "5.1.0",
 		"passport": "^0.4.0",
 		"passport-local-mongoose": "^4.4.0",
 		"react": "^16.2.0",
 		"react-apollo": "^2.0.4",
-		"react-dom": "^16.2.0"
+		"react-dom": "^16.2.0",
+		"styled-components": "^3.3.0",
+		"styled-normalize": "^4.0.0",
+		"styled-reset": "^1.3.4"
 	},
 	"devDependencies": {
+		"babel-plugin-styled-components": "^1.5.1",
 		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
