--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"apollo-boost": "^0.1.7",
 		"apollo-client-preset": "^1.0.5",
 		"apollo-link-context": "^1.0.7",
 		"apollo-server-express": "^1.2.0",
